# fastcs-eiger

./: .copier-answers.yml  .gitignore  Dockerfile  README.md  README.rst  catalog-info.yaml  pyproject.toml  run_acquisition.py  switcher.json
.github/: CONTRIBUTING.md  CONTRIBUTING.rst
0.1.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.1.0beta2/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta3/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta4/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta5/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.2.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.2.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.3.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.3.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
0.4.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.4.0b1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.4.0b2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.4.0b3/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.4.1b1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
api-fixes/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
api-fixes-2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
config-fetch/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
detector-fixes/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
dev-1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  (+1 more)
(+622 files in other folders)
